Backport to 1.20.3